16544
This compiles under 2.9.1, but under trunk:
{code}
abstract class FileOps {
  def withLock[R](start: Long = 0): Option[R]
}

trait DefaultFileOps {
  self: DefaultPath =>
  
  override def withLock[R](start: Long = 5): Option[R] = None
}

class DefaultPath extends FileOps with DefaultFileOps { }
{code}
{noformat}
bip.scala:11: error: overriding method withLock$default$1 in class FileOps of type [R]=> Long;
 method withLock$default$1 in trait DefaultFileOps of type [R]=> Long needs `override' modifier
class DefaultPath extends FileOps with DefaultFileOps { }
      ^
one error found
{noformat}
